# simple-bitcoin-rs

./: .gitignore  .travis.yml  Cargo.toml  README.md  Sequence Diagram0.asta  build.sh  cluster.sh  curl.sh  curl1.sh  default_wallet.json  pic.graffle  roamap.txt  test.sh  vagrant_cluster.sh
src/: block.rs  blockchain.rs  cli.rs  comm.rs  command.rs  db.rs  error.rs  http_server.rs  lib.rs  log.rs  main.rs  merkle_tree.rs  mine.rs  mod.rs  pool.rs  proof_of_work.rs  router.rs  server.rs  transaction.rs  util.rs  utxo_set.rs  wallet.rs  wallets.rs
static/: index.html
tool/: build.sh  cluster.sh  cluster2.sh  cluster3.sh  curl.sh  curl1.sh
