[package]
name = "simple-bitcoin-rs"
version = "0.1.0"
authors = ["Rg <daimaldd@gmail.com>"]

[dependencies]
sha2 = "0.6.0"
time = "0.1"
tempdir = "*"
secp256k1 = "0.7.1"
hex = { git = "https://github.com/KokaKiwi/rust-hex.git"}
util_rs = {git = "https://github.com/laohanlinux/util-rs.git"}
compare = "*"
rust-base58 = "*"
bigint = "*"
rand = "*"
rust-crypto = "^0.2"
crc = "^1.0.0"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
quick-error = "*"
runtime-fmt = "*"
byteorder = "*"
slog = "*"
slog-term = "*"
slog-async = "*"
shio = "0.2.0"
clap = "2.6.1"
prettytable-rs = "*"
rocksdb = "0.8.1"
lazy_static = "0.2.8"
futures = "0.1"
hyper = "0.11"
tokio-core = "0.1"
sapper = "0.1"
sapper_body = "0.1"
sapper_std = "0.1"
typemap = "*"
validator_derive = "^0.6.0"
validator = "^0.6.0"

[[bin]]
path = "src/main.rs"
name = "bitcoin"
